--- a/_posts/2024-09-04-noticias.markdown
+++ b/_posts/2024-09-04-noticias.markdown
@@ -16,8 +16,8 @@ para mostrar el efecto
 en la seccion 
 {% endhighlight %}
 
-Check out the [Jekyll docs][jekyll-docs] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll’s GitHub repo][jekyll-gh]. If you have questions, you can ask them on [Jekyll Talk][jekyll-talk].
+Revisar la pagina de [Microsoft][ref01] si busca informacion de Windows 11. Para poder revisar informacion de los productos de [IBM][ref02] hacer clic aqui. Pero si esta buscando informacion sobre compras revisa el sitio de [Amazon][ref03].
 
-[jekyll-docs]: https://jekyllrb.com/docs/home
-[jekyll-gh]:   https://github.com/jekyll/jekyll
-[jekyll-talk]: https://talk.jekyllrb.com/
+[ref01]: https://www.microsoft.com/
+[ref02]: https://www.ibm.com/
+[ref03]: https://www.amazon.com/
